--- a/WebDesignHomework/Assignment5/index.html
+++ b/WebDesignHomework/Assignment5/index.html
@@ -33,7 +33,7 @@
 
 <!-- Travel Journal Section-->
 <h2 id="travel-journal">3. Travel Journal</h2>
-    <img src="https://assets.bucketlistly.blog/sites/5adf778b6eabcc00190b75b1/assets/64608f6f165ece00029fce5a/saltinourhair-main-image.jpg" width="530">
+    <img src="https://assets.bucketlistly.blog/sites/5adf778b6eabcc00190b75b1/assets/64608f6f165ece00029fce5a/saltinourhair-main-image.jpg" width="530"/>
 <p> As for a travel journal, I imagine mine having that scrapbooking type of feel/texture to it. More handwritten fonts, 'taped' down pictures, kind of a controlled mess is what I picture.</p>
 <p> I would want it to feel more real and tangible than digital. I think travelling and collecting the memories from those travels should be in more of a tacticle medium, so I would try to make my website feel as real and scrapbook-y as possible. </p>
 
