--- a/WebDesignHomework/Assignment6/index.html
+++ b/WebDesignHomework/Assignment6/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <!--Website Content-->
-  <img src="/Users/sophiacasey/Documents/Professional Portfolio/Logos/logodrafts.png"class="logo">
+  <img src="/Users/sophiacasey/Documents/MART341-WebDesign/WebDesignHomework/Assignment6/images/logodrafts.png"class="logo">
     <hr>
   <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/MadduxCandid1.jpg" width="38.7%" style="margin-left: auto;">
   <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/Gus.jpg" width="42.5%">
