--- a/WebDesignHomework/Assignment6/index.html
+++ b/WebDesignHomework/Assignment6/index.html
@@ -17,8 +17,8 @@
 <!--Website Content-->
   <img src="logodrafts.png" class="logo">
     <hr>
-  <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/MadduxCandid1.jpg" width="38.7%" style="margin-left: auto;">
-  <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/Gus.jpg" width="42.5%">
+  <img src="MadduxCandid1.jpg" width="38.7%" style="margin-left: auto;">
+  <img src="Gus.jpg" width="42.5%">
   <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/DadCandid7.jpg" width="18.1%">
   <h1 style="text-align: center;">Sophia Photography</h1>    
       <h2 style="text-align: center;">Day-to-Day Wonders</h2>     
