--- a/WebDesignHomework/Assignment6/index.html
+++ b/WebDesignHomework/Assignment6/index.html
@@ -19,13 +19,13 @@
     <hr>
   <img src="MadduxCandid1.jpg" width="38.7%" style="margin-left: auto;">
   <img src="Gus.jpg" width="42.5%">
-  <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/DadCandid7.jpg" width="18.1%">
+  <img src="DadCandid7.jpg" width="18.1%">
   <h1 style="text-align: center;">Sophia Photography</h1>    
       <h2 style="text-align: center;">Day-to-Day Wonders</h2>     
 <!--Meet Me-->
-  <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/SelfPortrait1.jpg" width="34.8%"style="margin-left:auto;"/>
-  <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/Self Portrait3.jpg" width="32.1%" />
-  <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/SelfPortrait2.jpg" width="32.4%"/>
+  <img src="SelfPortrait1.jpg" width="34.8%"style="margin-left:auto;"/>
+  <img src="Self Portrait3.jpg" width="32.1%" />
+  <img src="SelfPortrait2.jpg" width="32.4%"/>
       <h1 style="text-align: center; background-color: #df614a;">Hello, I'm Sophia Casey!</h1>
           <p style="text-align: center;">I’m a <strong>Missoula, MT</strong> based photographer who strives to capture the inner beauty of the world and the people who inhabit it. Whether that be in a candid nature or inside of a controlled studio environment, my goal is to photograph the <i>simple</i> yet <u>beautiful</u> moments of day to day life.</p>
           <h3 style="text-align: center;">In my work, I <s>judge, discriminate, hate</s> || encourage, empower, and explore.</h3>
@@ -37,7 +37,7 @@
           </blockquote>
       <hr />
       
-  <a href="portfolio.html"><img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/MomCandid.jpg" width="29%" style="float: right; margin-left: 10px;"/></a>
+  <a href="portfolio.html"><img src="MomCandid.jpg" width="29%" style="float: right; margin-left: 10px;"/></a>
   
       <h1 style="width: 69.5%; float: center; text-align: left;">Portfolio</h1>  
                         
