--- a/WebDesignHomework/Assignment6/portfolio.html
+++ b/WebDesignHomework/Assignment6/portfolio.html
@@ -16,17 +16,17 @@
 </head>
 <body>
 <!--Logo Heading-->
-    <img src="/Users/sophiacasey/Documents/Professional Portfolio/Logos/Logo Drafts.png"class="logo">
+    <img src="logodrafts.png"class="logo">
 <!--Link Back Home-->
     <a href="index.html">Home</a>
     <hr>
-    <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/DadCandid1.jpg" width="30%" style="margin-left: auto;">
-    <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/DadCandid7.jpg" width="22.7%">
-    <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/GageCandid.jpg" width="30%">
-    <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/Gus.jpg" width="60%" style="margin-left: auto;">
-    <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/Maddux3.JPG" width="30%">
-    <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/MadduxB&W2.jpg" width="30%">
-    <img src="/Users/sophiacasey/Documents/Website Material/drive-download-20250205T190831Z-001/Moose1.jpg" width="30%">
+    <img src="DadCandid1.jpg" width="30%" style="margin-left: auto;">
+    <img src="DadCandid7.jpg" width="22.7%">
+    <img src="GageCandid.jpg" width="30%">
+    <img src="Gus.jpg" width="60%" style="margin-left: auto;">
+    <img src="Maddux3.JPG" width="30%">
+    <img src="MadduxB&W2.jpg" width="30%">
+    <img src="Moose1.jpg" width="30%">
 
 </body>
 </html>
