--- a/WebDesignHomework/Assignment6/portfolio.html
+++ b/WebDesignHomework/Assignment6/portfolio.html
@@ -20,13 +20,13 @@
 <!--Link Back Home-->
     <a href="index.html">Home</a>
     <hr>
-    <img src="DadCandid1.jpg" width="30%" style="margin-left: auto;">
-    <img src="DadCandid7.jpg" width="22.7%">
-    <img src="GageCandid.jpg" width="30%">
-    <img src="Gus.jpg" width="60%" style="margin-left: auto;">
-    <img src="Maddux3.JPG" width="30%">
-    <img src="MadduxB&W2.jpg" width="30%">
-    <img src="Moose1.jpg" width="30%">
+    <img src="images/DadCandid1.jpg" width="30%" style="margin-left: auto;">
+    <img src="images/DadCandid7.jpg" width="22.7%">
+    <img src="images/GageCandid.jpg" width="30%">
+    <img src="images/Gus.jpg" width="60%" style="margin-left: auto;">
+    <img src="images/Maddux3.JPG" width="30%">
+    <img src="images/MadduxB&W2.jpg" width="30%">
+    <img src="images/Moose1.jpg" width="30%">
 
 </body>
 </html>
