--- a/WebDesignHomework/Assignment6/portfolio.html
+++ b/WebDesignHomework/Assignment6/portfolio.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <!--Logo Heading-->
-    <img src="logodrafts.png"class="logo">
+    <img src="images/logodrafts.png"class="logo">
 <!--Link Back Home-->
     <a href="index.html">Home</a>
     <hr>
