--- a/WebDesignHomework/Assignment12/index.html
+++ b/WebDesignHomework/Assignment12/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!--Hero Image and Text Overlay-->
-<div class="header"><a href="homepage.html">SOPHIA CASEY</a></div>
+<div class="header"><a href="index.html">SOPHIA CASEY</a></div>
         <div class="enter"><a href="portfolio.html">ENTER</a></div>
         <div class="ig"><a href="https://www.instagram.com/bruh._.wut/">SOCIAL</a></div>
     <div class="container">
