--- a/WebDesignHomework/Assignment12/portfolio.html
+++ b/WebDesignHomework/Assignment12/portfolio.html
@@ -11,8 +11,8 @@
 <div>
 
 <!--Header-->
-    <div class="headerp"><a href="homepage.html">SOPHIA CASEY</a></div>
-    <div class="enter"><a href="homepage.html">HOME</a></div>
+    <div class="headerp"><a href="index.html">SOPHIA CASEY</a></div>
+    <div class="enter"><a href="index.html">HOME</a></div>
     <div class="ig"><a href="https://www.instagram.com/bruh._.wut/">SOCIAL</a></div>
 </div>
 
